telegraf/templates/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: telegraf
spec:
  hosts:
  - "*"
  gateways:
  - telegraf-gateway
  http:
  - match:
    - uri:
        prefix: /metrics
    route:
    - destination:
        host: telegraf
        port:
          number: 9273
